--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 layout: default
 ---
 <div class="news">
-    <a href="/jekyll-themes/gatok/" target="_blank">
-        <img class="news-img" src="/thumbs/webjeda-gatok-jekyll-theme-news.PNG" alt="webjeda gatok theme">
+    <a href="/jekyll-themes/online-cv/" target="_blank">
+        <img class="news-img" src="/thumbs/online-cv-responsive-jekyll-theme-thumbnail.PNG" alt="webjeda online cv jekyll theme">
     </a>
 </div>
 
