--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 ---
 layout: default
 ---
-<div class="news">
+<!-- <div class="news">
     <a href="/jekyll-themes/online-cv/" target="_blank">
         <img class="news-img" src="/thumbs/online-cv-responsive-jekyll-theme-thumbnail-1.PNG" alt="webjeda online cv jekyll theme">
     </a>
 </div>
-
+ -->
 
  <div id="mainbox">
      {% for post in paginator.posts %} 
