--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ layout: default
  -->
 
 <div class="preface mt2">
-    <div class="precont inline">
+    <div class="precont table-cell">
         <h1 class="eee" >New to Jekyll?</h1>
         <ol>
             <a target="_blank" href="/jekyll-guide/">
@@ -33,7 +33,7 @@ layout: default
         </ol>
     </div>
     
-    <div class="precont inline" style="background-color: #f39c12">
+    <div class="precont table-cell" style="background-color: #f39c12">
         <h1 class="eee" >New to Github Pages?</h1>
         <ol>
             <a target="_blank" href="/coding-and-more/">
