--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ layout: default
 
 <div class="preface mt2">
     <div class="precont table-cell">
-        <h1 class="eee" >New to Jekyll?</h1>
+        <h1 style="color:#eee">New to Jekyll?</h1>
         <ol>
             <a target="_blank" href="/jekyll-guide/">
                 <li class="ml2 eee"><strong>What is Jekyll?</strong></li>
@@ -34,7 +34,7 @@ layout: default
     </div>
     
     <div class="precont table-cell" style="background-color: #f39c12">
-        <h1 class="eee" >New to Github Pages?</h1>
+        <h1 style="color:#eee">New to Github Pages?</h1>
         <ol>
             <a target="_blank" href="/coding-and-more/">
                 <li class="ml2 eee"><strong>A brief intro</strong></li>
