--- a/index.html
+++ b/index.html
@@ -113,10 +113,10 @@ layout: default
 .eee {
     color: #fff;
     transition: 0.2s ease-in;
-    &:hover{
+    }
+.eee:hover{
         color: #333;
     }
-}
 
 .ml2 {
     margin-left: 2em;
