--- a/index.html
+++ b/index.html
@@ -31,9 +31,7 @@ layout: default
                 <li class="ml2 eee"><strong>How to optimize Jekyll blog for SEO?</strong></li>
             </a>
         </ol>
-    </div>
-     
-    <div class="precont" style="background-color: #f39c12">
+    </div><div class="precont" style="background-color: #f39c12">
         <h1 style="color:#fff">New to Github Pages?</h1>
         <ol>
             <a target="_blank" href="/coding-and-more/">
