--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@ layout: default
    @media screen and (max-width: 600px) {
         .ml2{
             margin-left: 0;
+            margin-bottom: 12px;
         } 
         .table-cell{
             display: block;
