--- a/_pages/search.html
+++ b/_pages/search.html
@@ -4,7 +4,9 @@ layout: default
 permalink: /search/
 ---
 <div class="page-content">
-
+<br />
+<br />
+<h1>Search</h1>
         <div id="search-page">
                 <gcse:search>Loading. . Please wait <i class="fa fa-circle-o-notch fa-spin fa fa-fw margin-bottom"></i></gcse:search>
         <script>
