--- a/_pages/tags.html
+++ b/_pages/tags.html
@@ -2,6 +2,7 @@
 layout: page
 permalink: /tags/
 title: Tags
+desc: Find all the webjeda jekyll tutorial and github tutorials arranged according to their categories.
 adallow: 0
 inmenu: 0
 ---
