--- a/_pages/search.html
+++ b/_pages/search.html
@@ -1,6 +1,7 @@
 ---
 title: Search
 layout: default
+desc: Search Jekyll tutorials and github tutorials and Jekyll themes from here.
 permalink: /search/
 ---
 <div class="page-content">
